--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://godoyeon.github.io/bookSearch",
+  "homepage": "./",
   "name": "book",
   "version": "0.1.0",
   "private": true,
